Configure datasource and DB sql scripts in application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+# Database init
+spring.datasource.initialization-mode=always
+spring.datasource.schema=classpath:/db/schema.sql
+spring.datasource.data=classpath:/db/data.sql
+# Oracle
+spring.datasource.url=jdbc:postgresql://localhost:5432/routineplanner
+spring.datasource.username=postgres
+spring.datasource.password=postgres
