Add JSON deserialization property
Make it deserialize null as null instead of 0

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.data=classpath:/db/data.sql
 spring.datasource.url=jdbc:postgresql://localhost:5432/routineplanner
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+# Jackson
+spring.jackson.deserialization.accept-empty-string-as-null-object=true
