Fix Postgres timestamp values recognition
Add ?stringtype=unspecified to datasource.url in application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.initialization-mode=always
 spring.datasource.schema=classpath:/db/schema.sql
 spring.datasource.data=classpath:/db/data.sql
 # Oracle
-spring.datasource.url=jdbc:postgresql://localhost:5432/routineplanner
+spring.datasource.url=jdbc:postgresql://localhost:5432/routineplanner?stringtype=unspecified
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 # Jackson
